--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,5 +1,8 @@
 name: Build and Deploy Docker image
 on: [push]
+permissions:
+  id-token: write   # This is required for requesting the JWT
+  contents: read  
 jobs:
   build:
     runs-on: ubuntu-latest
